example_yaml/affinity_prefer_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prefered-affinity-test1
  labels:
    app: httpService
spec:
  containers:
    - name: affinity-test-container
      image: mattsong/showpod:v1
      ports:
      - containerPort: 80
  affinity:
    nodeAffinity:
      preferredDuringSchedulingIgnoredDuringExecution:   ### 软策略 必须要符合负责不创建pod
        - weight: 1
          preference: 
            matchExpressions:    ### 如果有 hostname=k8s-worknode-02, 优先考虑
              - key: kubernetes.io/hostname
                operator: In
                values: 
                  - k8s-worknode-02
