example_yaml/deployment_with_tolerations.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 6
  template:
    metadata:
      labels:
        app: nginx
    spec:
      tolerations:
        - key: "node.kubernetes.io/unreachable"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 2
        - key: "node.kubernetes.io/not-ready"
          operator: "Exists"
          effect: "NoExecute"
          tolerationSeconds: 2
      containers:
      - name: homepage-container
        image: mattsong/showpod:v1
        ports:
        - containerPort: 80
