example_yaml/emptyDir_2pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-2pod
spec:
  containers:
    - name: busybox
      image: busybox
      volumeMounts:
      - mountPath: /cache
        name: webfiles
      command: ["/bin/sh","-c","sleep 100000"]
    - name: showpod-container
      image: mattsong/showpod:v1
      ports:
      - containerPort: 80
      volumeMounts:
      - mountPath: /usr/share/nginx/html/exta
        name: webfiles
  volumes:
    - name: webfiles
      emptyDir: {}
