example_yaml/emptyDir_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emptydir-pod
spec:
  containers:
    - name: showpod-container
      image: mattsong/showpod:v1
      ports:
      - containerPort: 80
      volumeMounts:
      - mountPath: /usr/share/nginx/html/exta
        name: webfiles
  volumes:
    - name: webfiles
      emptyDir: {}    ## 为空
