example_yaml/hostpath_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-pod
spec:
  containers:
    - name: showpod-container
      image: mattsong/showpod:v1
      ports:
      - containerPort: 80
      volumeMounts:
      - mountPath: /usr/share/nginx/html/extra
        name: webfiles
  volumes:
    - name: webfiles
      hostPath:
        path: /data/html
        type: Directory    ### 给定的路径下必须存在目录
