example_yaml/livenesshttpget.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-httpget-pod
spec:
  containers:
  - name: liveness-exec-container
    image: nginx
    ports:
    - name: http
      containerPort: 80
    livenessProbe:
      httpGet:
        port: http
        path: /index.html
      initialDelaySeconds: 1         ### container启动后1秒启动探针
      periodSeconds: 3               ### 重试时间
      timeoutSeconds: 10             ### 超时时间
