example_yaml/pod_busybox.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox1
spec:
  containers:
    - name: busybox-c
      image: busybox
      command: ["/bin/sh","-c","sleep 100000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox2
spec:
  containers:
    - name: busybox-c
      image: busybox
      command: ["/bin/sh","-c","sleep 100000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox3
spec:
  containers:
    - name: busybox-c
      image: busybox
      command: ["/bin/sh","-c","sleep 100000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox4
spec:
  containers:
    - name: busybox-c
      image: busybox
      command: ["/bin/sh","-c","sleep 100000"]
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox5
spec:
  containers:
    - name: busybox-c
      image: busybox
      command: ["/bin/sh","-c","sleep 100000"]
---
