example_yaml/scv-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      release: stable 
  template:
    metadata:
      labels:
        app: nginx
        env: test
        release: stable
    spec:
      containers:
      - name: homepage-container
        image: mattsong/testapp:v1
        # imagePullPolicy: Always
        ports:
        - name: http 
          containerPort: 80
