example_yaml/startstop.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lifecycle-demo
spec:
  containers:
  - name: lifecycle-demo-container
    image: nginx
    lifecycle:
      postStart:
        exec:
          command: ["/bin/sh","-c","echo hello from proStart handler > /usr/share/message"]
      preStop:
        exec:
          command: ["/bin/sh","-c","echo hello from preStop handler > /usr/share/message"]
