example_yaml/test.yaml
apiVersion: v1
kind: Pod 
metadata:
  name: testapp     
spec:
  containers:
    - name: webapp
      image: mattsong/testapp:v4
      ports:
        - containerPort: 80
