example_yaml/test_liveness.yaml
apiVersion: v1
kind: Pod
metadata:
  name: liveness-exec-pod
spec:
  containers:
  - name: liveness-exec-container-1
    image: busybox
    command: ["/bin/sh","-c","touch /tmp/live; sleep 30; rm -rf /tmp/live; sleep 3600"]
    livenessProbe:
      exec:
        command: ["test", "-e", "/tmp/live"]   
      initialDelaySeconds: 1         
      periodSeconds: 3
  - name: liveness-exec-container-2
    image: busybox
    command: ["/bin/sh","-c","touch /tmp/live; sleep 600; rm -rf /tmp/live; sleep 3600"]
    livenessProbe:
      exec:
        command: ["test", "-e", "/tmp/live"]   
      initialDelaySeconds: 1         
      periodSeconds: 3
