example_yaml/externalName.yaml
apiVersion: v1
kind: Service
metadata:
  name: externalname-svc
spec:
  type: ExternalName 
  externalName: matt.lab.com
