example_yaml/svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-nodeport-svc
spec:
  type: NodePort 
  selector:
    app: nginx
    release: stable
  ports:
  - name: http
    port: 80            ## service的port
    targetPort: 80      ## 目标pod的port
