example_yaml/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage-svc
spec:
  type: ClusterIP
  selector: 
    app: nginx
    release: stable
  ports:
  - name: http
    port: 80            ## service的port 
    targetPort: 80      ## 目标pod的port
